Lots of changes. Many updates and fixes.

--- a/about.html
+++ b/about.html
@@ -12,6 +12,12 @@
   body
 {
   font-family: "courier", sans-serif; background-color: black;
+
+  	background-image: url('images/cover-about.webp');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+
 }
 
 .main {
@@ -105,14 +111,14 @@
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Harmonious Platform Systems is a startup. We understand the exciting 
 	and often chaotic hacker sub-culture that comes with being a startup. From day one, we have worked to ensure the startup sub-culture does 
-	not get lost and is reflected in Harmonious Platform.</div></font>
+	not get lost and is reflected in the Harmonious Platform.</div></font>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">Harmonious Platform has heritage that dates back to 2013. From 2019, 
+	<font color="gold"><div align="left" style="font-size:50%">Harmonious Platform Systems has heritage that dates back to 2013. From 2019 
 	development accelerated. The global pandemic has reshaped many industries and shone a light on the many possibilities of what can be 
 	achieved by working from home. Mainstream products offer confusing levels of interoperability and are often subjected to mass-surveillance, 
 	government censorship and big tech control. We do not like that. We believe YOU should be in control of YOUR network!</div></font>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">During 2020, we adopted a new focus to create a hybrid digital office platform 
+	<font color="gold"><div align="left" style="font-size:50%">Throughout 2020 we adopted a new focus to create a hybrid digital office platform 
 	using existing free and open-source components, combining them with our in-house developed tools, to establish a hybrid digital office 
 	specification tailored specifically for software development and publishing startups.</div></font>
 <br>
@@ -125,15 +131,17 @@
 	enables maximum level of scalability, effectively on-the-fly, without affecting overall performance of the platform or inducing 
 	avoidable downtime. Modular components can be added or removed as scaling is adapted. Interoperability is our core focus.</div></font>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%"><i>Are we really a startup?</i></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><i>Yes, absolutely!</i></div></font>
+	<font color="gold"><div align="left" style="font-size:70%"><i>"Are you really a startup?"</i></div></font>
+	<font color="gold"><div align="left" style="font-size:70%"><i>Yes, absolutely!</i></div></font>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">We preach high quality and set high expectations for ourselves in what we 
-	deliver.</div></font>
-	<br>	
+	<font color="gold"><div align="left" style="font-size:50%">Obviously we do not work out of Silicon Valley or have access to hundreds of 
+	thousands of dollars from angel investors, which would allow us to do very amazing things with our technology. Instead, we are forced to 
+	do amazing things without funding from angel investors and with the very minimum of technology running out of an apartment. Still, we 
+	preach high quality and set high expectations for ourselves in what we deliver.</div></font>
+<br>	
 	<font color="gold"><div align="left" style="font-size:50%">We are never going to claim to be something that we are not. We do not have a 
 	suite of corporate offices available to us, we do not have a call center located in a third-world country operated by a highly underpaid 
-	workforce and we do not have a team of lawyers ready to defend us. Primarily, we are run from an apartment complex on the Gold Coast in 
+	workforce and we do not have a team of lawyers ready to defend us. Primarily, we are run from an apartment block on the Gold Coast in 
 	Australia by our founder, 
 	<a href="chris-mcgimpsey-jones.html" style="color:gold; text-decoration:none";><u>Chris McGimpsey-Jones</u></a>, along with a small group 
 	of dedicated volunteers in various locations around the world whom make contributions.</div></font>
@@ -168,8 +176,12 @@
 		</figure>
 		<figure>
 			<img src="images/cmdc-gobblechain.jpg" width="200">
-			<figcaption><font color="gold"><div style="font-size:50%">Gobble Chain [Private blockchain]</div></font></figcaption>
-			<figcaption><font color="gold"><div style="font-size:50%">(Ubuntu Server 21.10)</div></font></figcaption>
+			<figcaption><font color="gold"><div style="font-size:50%">Gobble Chain [Private blockchain]<br>
+			(Ubuntu Server 21.10)<br>
+			+
+			</div></font></figcaption>
+			<figcaption><font color="gold"><div style="font-size:50%">CMDC block Server<br>
+			(Windows Server)</div></font></figcaption>
 		</figure>
 		<figure>
 			<img src="images/office.jpg" width="200">
@@ -177,24 +189,24 @@
 		</figure>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Most of our infrastructure is built from a combination of laptops and recycled 
-	desktop computers, some running as servers. We operate an internal intranet with multiple domains which interconnects seamlessly with the internet, 
-	allowing public access. Some publicly accessible components of the Harmonious Platform are hosted using traditional server methods. Our hybrid 
-	network allows for seamless performance and has created an extremely stable and rodubst platform. Generally, most people would be very surprised 
-	about what we have been able to achieve on the bare minimum of hardware that we operate.</div></font>
+	desktop computers, with some of them running as servers. We operate an internal intranet with multiple domains which interconnects seamlessly 
+	with the internet, allowing public access. Some publicly accessible components of Harmonious Platform are hosted using traditional server 
+	methods. Our hybrid network allows for seamless performance and has created an extremely stable and rodust platform. Generally, most people 
+	would be very surprised about what we have been able to achieve on the bare minimum of hardware that we operate.</div></font>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">Operating and administering our own hardware can be resource intensive and still 
-	costs a lot of money. Is there bugs? Do things fail? Do things break? Of course they do! But remaining in control of the core operations of our 
-	own platform is important to us and we have the expertise to be able to deal with all of these problems when they arise. We are proud of all 
-	that we have achieved and have already far exceeded all expectations that we had of how far and how hard we could push the Harmonious Platform. 
-	And we're not finished yet!</div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%">Operating and administering our own infrastructure can be resource intensive and actually 
+	costs a lot of money. Is there bugs? You bet there is! Do things fail? They sure do! Do things break? Of course they do! But remaining in control 
+	of the core operations of our own platform is important to us and we have the expertise to be able to deal with all of these problems when they 
+	arise. We are proud of all that we have achieved and have already far exceeded all expectations that we had of how far and how hard we could push 
+	Harmonious Platform. And we're not finished yet!</div></font><br>
 
 	<p><strong>Payments and Donations</strong></p>
 <br>
 	<font color="gold"><div align="center" style="font-size:50%">PayPal: <b><a href="https://www.paypal.me/mppmau">paypal.me/mppmau</a></b></div></font>
 	<font color="gold"><div align="center" style="font-size:50%">Patreon: <b><a href="https://www.patreon.com/mppmau">patreon.com/mppmau</a></b></div></font>
-	<font color="gold"><div align="center" style="font-size:50%">Bitcoin: <b>1G8LY7CKK8TDQ7EkmKef8BtSCtRivby4uF</b></div></font>
-	<font color="gold"><div align="center" style="font-size:50%">Ethereum: <b>0xd13Bf3f6bf90824816526e4B0260Ec899F30B5A8</b></div></font>
-	<font color="gold"><div align="center" style="font-size:50%">Litecoin: <b>ltc1qxs8dhejakl6rjdcckhlxf8trd8l8am0m5270zc</b></div></font><br>
+	<font color="gold"><div align="center" style="font-size:50%">Bitcoin: <b>bc1qe30ghqwgmpcjffv5n2wdcjg9tsjsqy8582z555</b></div></font>
+	<font color="gold"><div align="center" style="font-size:50%">Metamask/Ethereum: <b>0xd5616494e11cA56c36Bd6385A70748dd1257C113</b></div></font>
+	<font color="gold"><div align="center" style="font-size:50%">Litecoin: <b>ltc1qku6ur4v4chcu83rwydc99kwflzensd06gdv4fe</b></div></font><br>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
 	<div align="right" style="font-size:40%">&copy; Copyright 2021-2022</div>
