--- a/chris-mcgimpsey-jones.html
+++ b/chris-mcgimpsey-jones.html
@@ -106,7 +106,7 @@
 	<font color="gold"><div align="left" style="font-size:50%">I live in Australia and am a writer, publisher, political activist and civil 
 	libertarian.</div></font>
 <!-- no break here on this occasion -->
-	<font color="gold"><div align="left" style="font-size:50%">I am also a public advocate for Creative Commons and Tor.</div></font>
+	<font color="gold"><div align="left" style="font-size:50%">I am a public advocate for Creative Commons, Tor Project and Cicada 3301.</div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">You can contact me by visiting the 
 	<a href="contact.html" style="color:gold; text-decoration:none";><u>Contact</u></a> page.</div></font><br>
