--- a/cmdc.html
+++ b/cmdc.html
@@ -12,6 +12,12 @@
   body
 {
   font-family: "courier", sans-serif; background-color: black;
+
+    	background-image: url('images/cover-crypto.webp');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+
 }
 
 .main {
@@ -107,17 +113,24 @@ cursor: pointer;
 	<a href="contact.html">CONTACT</a>
 	</strong></div></font>
 	<hr style="border: 1px solid gold;" /><br>
+	
+	<font color="black"><div align="left" style="font-size:80%">
+		<span style="background-color: red">
+			<strong>!!! WARNING: UNDER HEAVY DEVELOPMENT - LAUNCH TARGET SECOND-HALF 2022 !!!</strong>
+		</span>
+	</div></font>
 
-	<p><strong>CMDC (Centrally Managed Digital Currency)</strong></p>
+	<p><strong>CMDC (Centrally Managed Digital Currency)</strong><br>
+	A digital currency and asset class, built on top of Gobble blockchain technology.</p>
 <br>
 	<img src="images/cmdc-icon-128px.png" alt="cmdc-logo" width="64" height="64">
 
-	<font color="gold"><div align="left" style="font-size:50%">CMDC is an acronym for <u>Centrally Managed Digital Currency</u> and can be stylized as 
-	$CMDC.</div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%">CMDC is an acronym for <b>Centrally Managed Digital Currency</b> and is stylized as 
+	<b>$CMDC</b>.</div></font><br>
 	
-	<font color="gold"><div align="left" style="font-size:50%">It is a prototype digital currency (or asset) with a specification which pegs it to a defined 
-	existing currency to determine its value. Due to the way it has been developed, it is inherently flawed. The original value rate was proposed to be 
-	1:1.25. For example, 1 US dollar would equate to 1.25 CMDC. However, big development changes to the mining process have now altered the original rate. 
+	<font color="gold"><div align="left" style="font-size:50%">It is a prototype digital currency and asset class with a specification which pegs $CMDC to a 
+	defined existing currency to determine its value. Due to the way it has been developed, it is inherently flawed. The original value rate was proposed to 
+	be 1:1.25. For example, 1 US dollar would equate to 1.25 CMDC. However, big development changes to the mining process have now altered the original rate. 
 	The value rate is now 1:2500.</div></font><br>
 
 	<font color="gold"><div align="left" style="font-size:50%">Bitcoin is infamous for being energy and resource intensive during the mining process. Some 
@@ -125,7 +138,7 @@ cursor: pointer;
 	both mining and storage. This helps increase energy efficiency and ease the storage burden while still being able to mine large amounts. During the mining 
 	process it may push all cores of the central processing unit to maximum but memory usage remains moderate. While there is no technical limitation to the 
 	total number of CMDC blocks that can be put into circulation, there are still restrictions of the amount of available blocks in holding in the social 
-	distribution vault.</div></font><br>
+	distribution vaults. Currently, this is limited to 1 trillion CMDC per social distribution vault, across a maximum of 4 vaults.</div></font><br>
 
 	<font color="gold"><div align="left" style="font-size:50%">CMDC is mined using a parallel processing and file duplication combination. Mined blocks are 
 	created from a raw block, called "block0". To prevent fraudulent duplication of blocks, each individual block is dated and timestamped which cannot be 
@@ -135,38 +148,72 @@ cursor: pointer;
 
 	<font color="gold"><div align="left" style="font-size:50%">Once blocks have been mined, refined, encrypted, digitally signed and verified, they are 
 	moved into a social distribution vault for circulation. We are currently testing software which enables buying of CMDC and verification of transactions. 
-	We are still developing software which enables selling and trading. CMDC operates on our private blockchain, called Gobble Chain.</div></font><br>
+	We are still developing software which enables selling and trading. CMDC operates on our private blockchain, called Gobble Chain. In March 2022, it received 
+	its first major upgrade to version 2.0.</div></font><br>
 
-	<font color="gold"><div align="left" style="font-size:50%">One area of development focus is on integrating support for 
+	<font color="gold"><div align="left" style="font-size:50%">New areas of development focus include integrating support for new tokens and also  
 	<!-- do not use tab in front of <span>. keep level with line start -->
 non-fungible tokens<b><span title="A non-fungible token (NFT) is a non-interchangeable unit of data stored on a blockchain, a form of digital ledger, that can be sold and traded.
 Source: Wikipedia">[?]</span></b>, or NFTs.
 	<!-- return to normal line formatting -->	
-	The specification for NFT integration with our blockchain is yet to be finalized and more information will be provided when available. We aim to offer 
-	NFT integration which will be applicable to original creations in the forms of digital images, photos, audio, video and other digital artwork creations, 
+	Specifications for new tokens and NFT integration with our blockchain is yet to be finalized and more information will be provided when available. We aim 
+	to offer NFT integration which will be applicable to original creations in the forms of digital images, photos, audio, video and other digital artwork creations, 
 	which can be sold as NFT by rights holders and bought using CMDC. The proof of rights and the transaction will be integrated into Gobble Chain.</div></font><br>
 
 		<center>
-			<button class="button button1"><b><a href="" 
-						style="color:black; text-decoration:none";>*APPLY FOR TRANSACTION ID</a></b></button>
-			<button class="button button1"><b><a href="" 
-						style="color:black; text-decoration:none";>*APPLY TO BUY CMDC</a></b></button>
-			<button class="button button1"><b><a href="" 
-						style="color:black; text-decoration:none";>*APPLY FOR NFT ID</a></b></button>
-			<button class="button button1"><b><a href="" 
-						style="color:black; text-decoration:none";>*APPLY TO SELL NFT</a></b></button>
+			<button class="button button1"><b><a href="https://forms.office.com/r/8kxTWxtvch" 
+						style="color:black; text-decoration:none";>APPLY FOR TRANSACTION ID</a></b></button>
+			<button class="button button1"><b><a href="https://forms.office.com/r/AWWEgaP9UX" 
+						style="color:black; text-decoration:none";>APPLY TO BUY CMDC</a></b></button>
+			<button class="button button1"><b><a href="https://forms.office.com/r/0XiQ2nkLvm" 
+						style="color:black; text-decoration:none";>APPLY FOR NFT ID</a></b></button>
+			<button class="button button1"><b><a href="https://forms.office.com/r/ztAFrmmz3k" 
+						style="color:black; text-decoration:none";>APPLY TO SELL NFT</a></b></button>
 		</center>
-			<font color="gold"><div align="center" style="font-size:45%"><b><em>*Applications closed until further notice.</em></b></div></font><br>
+		<br>
 
 <br>
-	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault: $CMDC 969,991,250,000</div></font>
-	<font color="gold"><div align="left" style="font-size:60%">In circulation: $CMDC 8,750,000</div></font>
-	<font color="gold"><div align="left" style="font-size:60%">Value rate: 1:2500</div></font>
-	<font color="gold"><div align="left" style="font-size:60%">Valuation: $US 388,000,000</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:75%"><a href="https://docs.google.com/spreadsheets/d/14TeukKYsFrlfqPNTL6MtW-EyGVnKzuGh7yznHzoDgFo/edit?usp=sharing">
+	<strong>TRANSACTIONS LIST</strong></a></div></font>
+
+	<font color="gold"><div align="left" style="font-size:75%"><a href="https://drive.google.com/file/d/1Mbc2ShKMFHIGu7kSsa7q_rV0kFsr45Zk/view?usp=sharing">
+	<strong>SOCIAL DISTRIBUTION VAULT #1</strong></a></div></font>
 <br>
-	<font color="gold"><div align="left" style="font-size:60%"><strong>Current NFT listings: </div></font>
-	<font color="gold"><div align="left" style="font-size:60%"><em>No items currently listed</em></strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #1: $CMDC 999,991,250,000</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #2: $CMDC 20,000,000,000</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #3: $CMDC 0</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #4: $CMDC 0</strong></div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>In circulation: $CMDC 8,750,000</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Value rate: 1:2500</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Valuation: $US 408,000,000</strong></div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Token options: </strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong><em>Not yet supported</em></strong></div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>NFT listings: </strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong><em>Not yet supported</em></strong></div></font><br>
+<br>	
+	<font color="gold"><div align="left" style="font-size:50%"><strong><u>FAQ about $CMDC</u></strong></div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%"><strong>1. Is it a currency or an asset?</strong><br>
+	We treat $CMDC as an asset as it is just one component of the Centrally Managed Digital Currency platform.
+	</div></font>
 	<br>
+	<font color="gold"><div align="left" style="font-size:50%"><strong>2. If I buy, can I sell?</strong><br>
+	No. Currently we only offer options to buy $CMDC.
+	</div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%"><strong>3. Will I lose money?</strong><br>
+	We treat $CMDC as an asset. We do not consider money invested through purchasing $CMDC to be a loss.
+	</div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%"><strong>4. Where does the money go?</strong><br>
+	All funds from purchasing $CMDC are directed into a dedicated holding account.
+	</div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%"><strong>5. Is it right for me?</strong><br>
+	Only you can decide! We develop the Centrally Managed Digital Currency platform to deliver a stable, secure, transparent platform for digital 
+	assets and currency. However, much like traditional stock and crypto markets, the potential for financial loss is real and liability for any 
+	losses is the responsibility of consumers.
+	</div></font><br>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
