--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
 	<a href="hardware.html">HARDWARE</a> | 
 	<a href="pricing.html">PRICING</a> | 
 	<a href="about.html">ABOUT</a> | 
-	<a href="contact.html">CONTACT</a>
+	<a href="contact.html">CONTACT</a> | 
+	<a href="">DOMAIN NAMES</a> < COMING SOON! | 
+	<a href="">HOSTING</a> < COMING SOON! | 
+	<a href="">GLOBAL SUPPORT</a> < COMING SOON!
 	</strong></div></font>
 	<hr style="border: 1px solid gold;" />
 
@@ -185,6 +188,35 @@
 	robust against system failure.</div></font><br>
 <br>
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>March 25, 2022</b><br>
+	<br>
+	We have added two new Gateways and viADDR databases which are acting parents to a new sub-hub configuration.
+	<br>
+	Although extremely complex, the new databases add better capability and flexibility to our existing viADDR configuration.
+	</em>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>March 25, 2022</b><br>
+	<br>
+	Pouch has been updated to version 1.1 Beta 2.
+	<br>
+	This is not a feature release, instead fixes many bugs.
+	</em>
+	</p>
+	
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>March 25, 2022</b><br>
+	<br>
+	We have successfully upgraded Gobble Chain to version 2.0.
+	<br>
+	It was updated on-the-fly, running processes switched to new binaries and no downtime.
+	<br>
+	Complete success.
+	</em>
+	</p>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>March 6, 2022</b><br>
