--- a/status.html
+++ b/status.html
@@ -12,6 +12,12 @@
   body
 {
   font-family: "courier", sans-serif; background-color: black;
+
+  	background-image: url('images/cover-status.webp');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+
 }
 
 .main {
@@ -321,50 +327,61 @@
 <br>
 	<table style="width:50%">
 		<tr>
+			<th>Signal</th>
 			<th>Network</th>
 			<th>Status</th>
 		</tr>
 		<tr>
+			<td>&#128992</td>
 			<td>Gateway (InfinitySky)</td>
 			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
 		</tr>
 		<tr>
+			<td>&#128992</td>
 			<td>Gateway (EggplantTwo)</td>
 			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
 		</tr>
 		<tr>
+			<td>&#128992</td>
 			<td>Parent Hub 1</td>
 			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
 		</tr>
 		<tr>
+			<td>&#128992</td>
 			<td>Parent Hub 2</td>
 			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
 		</tr>
 		<tr>
+			<td>&#128992</td>
 			<td>Sub-Hub 1</td>
 			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
 		</tr>
 		<tr>
+			<td>&#128994</td>
 			<td>Sub-Hub 2</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 		</tr>
 		<tr>
+			<td>&#128994</td>
 			<td>Sub-Hub 3</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 		</tr>
 		<tr>
+			<td>&#128992</td>
 			<td>Sub-Hub 4</td>
 			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
 		</tr>
 		<tr>
+			<td>&#128992</td>
 			<td>viADDR Subnet</td>
 			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
 		</tr>
 	</table>
 	<br>
 				<!-- colors
-					&#128994; = green light
-					&#128308; = red light
+					&#128994; = green signal
+					&#128992; = orange signal
+					&#128308; = red signal
 							-->
 
 	<font color="gold"><div align="left" style="font-size:40%"><b><em>NOTE: Data is not real time. This page is managed and updated manually 
