--- a/about.html
+++ b/about.html
@@ -12,11 +12,11 @@
   body
 {
   font-family: "courier", sans-serif; background-color: black;
-
-  	background-image: url('images/cover-about.webp');
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
+	
+  background-image: url('images/cover-about.webp');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 
 }
 
@@ -178,9 +178,8 @@
 			<img src="images/cmdc-gobblechain.jpg" width="200">
 			<figcaption><font color="gold"><div style="font-size:50%">Gobble Chain [Private blockchain]<br>
 			(Ubuntu Server 21.10)<br>
-			+
-			</div></font></figcaption>
-			<figcaption><font color="gold"><div style="font-size:50%">CMDC block Server<br>
+			+<br>
+			CMDC block Server<br>
 			(Windows Server)</div></font></figcaption>
 		</figure>
 		<figure>
