Another attempted fix.

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 {
   font-family: "courier", sans-serif; background-color: black;
 	
-  background-image: url('images/cover-about.webp');
+  background-image: url('images/about-cover.webp');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -155,27 +155,27 @@
 			<figcaption><font color="gold"><div style="font-size:50%">(Founder)</div></font></figcaption>
 		</figure>
 		<figure>
-			<img src="images/core.jpg" width="200">
+			<img src="images/Core.jpg" width="200">
 			<figcaption><font color="gold"><div style="font-size:50%">Core</div></font></figcaption>
 			<figcaption><font color="gold"><div style="font-size:50%">(Tumbleweed)</div></font></figcaption>
 		</figure>
 		<figure>
-			<img src="images/mainframe.jpg" width="200">
+			<img src="images/Mainframe.jpg" width="200">
 			<figcaption><font color="gold"><div style="font-size:50%">Mainframe</div></font></figcaption>
 			<figcaption><font color="gold"><div style="font-size:50%">(Tumbleweed)</div></font></figcaption>
 		</figure>
 		<figure>
-			<img src="images/cmdc-sysadmin.jpg" width="200">
+			<img src="images/CMDC-Sysadmin.jpg" width="200">
 			<figcaption><font color="gold"><div style="font-size:50%">CMDC System Administration</div></font></figcaption>
 			<figcaption><font color="gold"><div style="font-size:50%">(Fedora 35 Workstation)</div></font></figcaption>
 		</figure>
 		<figure>
-			<img src="images/cmdc-mining.jpg" height="200">
+			<img src="images/CMDC-Mining.jpg" height="200">
 			<figcaption><font color="gold"><div style="font-size:50%">CMDC Mining Servers</div></font></figcaption>
 			<figcaption><font color="gold"><div style="font-size:50%">(Ubuntu Server 21.10)</div></font></figcaption>
 		</figure>
 		<figure>
-			<img src="images/cmdc-gobblechain.jpg" width="200">
+			<img src="images/CMDC-Gobblechain-Blockserver.jpg" width="200">
 			<figcaption><font color="gold"><div style="font-size:50%">Gobble Chain [Private blockchain]<br>
 			(Ubuntu Server 21.10)<br>
 			+<br>
@@ -183,7 +183,7 @@
 			(Windows Server)</div></font></figcaption>
 		</figure>
 		<figure>
-			<img src="images/office.jpg" width="200">
+			<img src="images/Office.jpg" width="200">
 			<figcaption><font color="gold"><div style="font-size:50%">Office</div></font></figcaption>
 		</figure>
 <br>
