--- a/cmdc.html
+++ b/cmdc.html
@@ -13,7 +13,7 @@
 {
   font-family: "courier", sans-serif; background-color: black;
   
-  background-image: url('images/cover-crypto.webp');
+  background-image: url('images/crypto-cover.webp');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
