--- a/status.html
+++ b/status.html
@@ -13,7 +13,7 @@
 {
   font-family: "courier", sans-serif; background-color: black;
 
-  background-image: url('images/cover-status.webp');
+  background-image: url('images/status-cover.webp');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
