changed a webp > png

--- a/cmdc.html
+++ b/cmdc.html
@@ -3,6 +3,9 @@
 	<!-- Harmonious Platform Systems \./ -->
 	<!-- Site version 2.4.3 \./ -->
 
+		<!-- for some weird reason the webp cover image used for background fails to render on 
+			this page. stick with png image as it works -->
+
 <head>
 <meta name="robots" content="noindex">
 
@@ -13,7 +16,7 @@
 {
   font-family: "courier", sans-serif; background-color: black;
   
-  background-image: url('images/crypto-cover.webp');
+  background-image: url('images/crypto-cover.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
