--- a/cmdc.html
+++ b/cmdc.html
@@ -183,13 +183,13 @@ Source: Wikipedia">[?]</span></b>, or NFTs.
 	<strong>SOCIAL DISTRIBUTION VAULT #1</strong></a></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #1: $CMDC 999,991,250,000</strong></div></font>
-	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #2: $CMDC 20,000,000,000</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #2: $CMDC 40,000,000,000</strong></div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #3: $CMDC 0</strong></div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #4: $CMDC 0</strong></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>In circulation: $CMDC 8,750,000</strong></div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Value rate: 1:2500</strong></div></font>
-	<font color="gold"><div align="left" style="font-size:60%"><strong>Valuation: $US 408,000,000</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>[Theoretical] Valuation: $US 416,000,000</strong></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Token options: </strong></div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong><em>Not yet supported</em></strong></div></font>
