Updated CMDC stuff

--- a/cmdc.html
+++ b/cmdc.html
@@ -119,9 +119,39 @@ cursor: pointer;
 	
 	<font color="black"><div align="left" style="font-size:80%">
 		<span style="background-color: red">
-			<strong>!!! WARNING: UNDER HEAVY DEVELOPMENT - LAUNCH TARGET SECOND-HALF 2022 !!!</strong>
+			<strong>!!! WARNING: UNDER HEAVY DEVELOPMENT - LAUNCH TARGET SECOND-HALF 2023 to FIRST-HALF 2024 !!!</strong><br>
+			<strong>Access available for early adopters.</strong>
 		</span>
 	</div></font>
+<br>
+	<font color="white"><div style="font-size:70%"><marquee scrollamount="2"><b>
+				$US to $CMDC = 1:2500 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				CICADA = (US)$107.75 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				POWER8 = (US)$431.00 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				TIDEIN = (US)$215.50 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+
+				$US to $CMDC = 1:2500 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				CICADA = (US)$107.75 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				POWER8 = (US)$431.00 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				TIDEIN = (US)$215.50 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+
+				$US to $CMDC = 1:2500 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				CICADA = (US)$107.75 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				POWER8 = (US)$431.00 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				TIDEIN = (US)$215.50 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+
+				$US to $CMDC = 1:2500 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				CICADA = (US)$107.75 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				POWER8 = (US)$431.00 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				TIDEIN = (US)$215.50 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+
+				$US to $CMDC = 1:2500 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				CICADA = (US)$107.75 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				POWER8 = (US)$431.00 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+				TIDEIN = (US)$215.50 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+	</b></marquee></div></font>
+<!-- benchmark 10775 at or above acceptable but below is loss of investments overall / primary factor energy + resources charges -->
 
 	<p><strong>CMDC (Centrally Managed Digital Currency)</strong><br>
 	A digital currency and asset class, built on top of Gobble blockchain technology.</p>
@@ -151,17 +181,24 @@ cursor: pointer;
 
 	<font color="gold"><div align="left" style="font-size:50%">Once blocks have been mined, refined, encrypted, digitally signed and verified, they are 
 	moved into a social distribution vault for circulation. We are currently testing software which enables buying of CMDC and verification of transactions. 
-	We are still developing software which enables selling and trading. CMDC operates on our private blockchain, called Gobble Chain. In March 2022, it received 
+	We are still developing software which enables selling and trading. CMDC operates on our private blockchain, called Gobble Chain. In March 2022 it received 
 	its first major upgrade to version 2.0.</div></font><br>
 
-	<font color="gold"><div align="left" style="font-size:50%">New areas of development focus include integrating support for new tokens and also  
+	<font color="gold"><div align="left" style="font-size:50%">In April 2022 we introduced three tokens - Cicada 3301 Community Token, Power8 Token and TideIn 
+	Token. Token options are fully compatible and integrated with CMDC and Gobble Chain. Token options are mined and refined similar to regular CMDC block sets, 
+	but have multiple layers of encryption, use a different verification method to include a unique tokenID and are valued different. Tokens are also limited in 
+	supply. The underlying technology of tokens is technically valued at an equivalent $CMDC 40,000,000,000. Tokens are a much more accessible way to access $CMDC 
+	at a much lower cost, but are limited in supply. The value of each token option is mathematically determined by the number of tokens in circulation compared to 
+	the number of tokens in supply.</div></font><br>
+
+	<font color="gold"><div align="left" style="font-size:50%">A new area of development focus will include integrating support for 
 	<!-- do not use tab in front of <span>. keep level with line start -->
 non-fungible tokens<b><span title="A non-fungible token (NFT) is a non-interchangeable unit of data stored on a blockchain, a form of digital ledger, that can be sold and traded.
 Source: Wikipedia">[?]</span></b>, or NFTs.
 	<!-- return to normal line formatting -->	
-	Specifications for new tokens and NFT integration with our blockchain is yet to be finalized and more information will be provided when available. We aim 
-	to offer NFT integration which will be applicable to original creations in the forms of digital images, photos, audio, video and other digital artwork creations, 
-	which can be sold as NFT by rights holders and bought using CMDC. The proof of rights and the transaction will be integrated into Gobble Chain.</div></font><br>
+	The specification for NFT integration with our blockchain is yet to be finalized and more information will be provided when available. We aim to offer NFT integration 
+	which will be applicable to original creations in the forms of digital images, photos, audio, video and other digital artwork creations, which can be sold as NFT by 
+	rights holders and bought using CMDC. The proof of rights and the transaction will be integrated into Gobble Chain.</div></font><br>
 
 		<center>
 			<button class="button button1"><b><a href="https://forms.office.com/r/8kxTWxtvch" 
@@ -181,18 +218,27 @@ Source: Wikipedia">[?]</span></b>, or NFTs.
 
 	<font color="gold"><div align="left" style="font-size:75%"><a href="https://drive.google.com/file/d/1Mbc2ShKMFHIGu7kSsa7q_rV0kFsr45Zk/view?usp=sharing">
 	<strong>SOCIAL DISTRIBUTION VAULT #1</strong></a></div></font>
+
+	<font color="gold"><div align="left" style="font-size:75%"><a href="https://www.dropbox.com/sh/8j5irb5u2jnsx4l/AAC6Foju7xCFPo2uIJMysUhva?dl=0">
+	<strong>GOBBLE CHAIN SNAPSHOTS</strong></a></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #1: $CMDC 999,987,312,500</strong></div></font>
-	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #2: $CMDC 140,000,000,000</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #2: $CMDC 160,000,000,000</strong></div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #3: $CMDC 0</strong></div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #4: $CMDC 0</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>[Index:CICADA] Issue 1 token supply: 5/100</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>[Index:POWER8] Issue 1 token supply: 1/25</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>[Index:TIDEIN] Issue 1 token supply: 1/50</strong></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>In circulation: $CMDC 12,687,500</strong></div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Value rate: 1:2500</strong></div></font>
-	<font color="gold"><div align="left" style="font-size:60%"><strong>[Theoretical] Valuation: $US 456,000,000</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>[Theoretical] Valuation: $US 464,000,000</strong></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Token options: </strong></div></font>
-	<font color="gold"><div align="left" style="font-size:60%"><strong><em>Not yet supported</em></strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong><em>[Index:CICADA] Cicada 3301 Community Token</em> 
+<span title="Cicada 3301 Community Token has no association with the official Cicada 3301 Token (www.cicada3301token.com) that runs on the Ethereum blockchain. Cicada 3301 Community Token is an independent token developed specifically for Gobble Chain.">[?]</span></strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong><em>[Index:POWER8] Power8 Token</em></strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong><em>[Index:TIDEIN] TideIn Token</em></strong></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>NFT listings: </strong></div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong><em>Not yet supported</em></strong></div></font><br>
